[tool.poetry]
name = "nonebot-plugin-imgexploration"
version = "0.1.9"
description = "Google、Yandx和基于PicImageSearch的saucenao、ascii2d搜图"
authors = ["cpufan"]
readme = "README.md"
packages = [{include = "nonebot_plugin_imgexploration"}]

[tool.poetry.dependencies]
python = "^3.10"
nonebot2 = "^2.0.0rc2"
nonebot-adapter-onebot = "^2.1.5"
nonebot-plugin-guild-patch = "^0.2.1"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
